--- a/src/app/appserver/cockpit/cockpit.component.html
+++ b/src/app/appserver/cockpit/cockpit.component.html
@@ -5,7 +5,8 @@
       <!-- <input type="text" class="form-control" [(ngModel)]="newServerName"> -->
       <input type="text" class="form-control" #serverinput>
       <label>Server Content</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerContent">
+      <!-- <input type="text" class="form-control" [(ngModel)]="newServerContent"> -->
+      <input type="text" class="form-control" #servercontent>
       <br>
       <button
         class="btn btn-primary"
