--- a/src/app/appserver/appserver.component.html
+++ b/src/app/appserver/appserver.component.html
@@ -5,6 +5,11 @@
         <div class="col-xs-12">
             <app-serverelement *ngFor="let serverElement of serverElements" [srvElement]="serverElement"></app-serverelement>
             </div>
+            <div class="col-xs-12">
+                <app-child>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                </app-child>
+            </div>
             </div>
 
   </div>
