--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,2 +1,4 @@
-<app-header></app-header>
+<app-header (featureselected)="onNavigate($event)"></app-header>
 <router-outlet></router-outlet>
+<!-- <app-recipes *ngIf="loadedfeature === 'recipe'"></app-recipes>
+<app-shoppinglist *ngIf="loadedfeature === 'shopping-list'"></app-shoppinglist> -->
