--- a/src/app/pages/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/pages/recipes/recipe-details/recipe-details.component.html
@@ -1,6 +1,9 @@
 <div class="row">
     <div class="col-lg-12">
-        Recipe Name
+        <img [src]="recipe?.imgPath" alt="img"/>
+    </div>
+    <div class="col-lg-12">
+       {{recipe?.name}}
     </div>
 </div>
 <div class="row">
