--- a/src/app/pages/shoppinglist/shoppingedit/shoppingedit.component.html
+++ b/src/app/pages/shoppinglist/shoppingedit/shoppingedit.component.html
@@ -3,18 +3,18 @@
     <form>
       <div class="col-lg-5 form-group">
         <label for="name">Name</label>
-        <input type="text" id="name" class="form-control" />
+        <input type="text" id="name" class="form-control" #nameInput/>
       </div>
       <div class="col-lg-5 form-group">
         <label for="name">Amount</label>
-        <input type="text" id="name" class="form-control" />
+        <input type="text" id="name" class="form-control" #amountInput/>
       </div>
     </form>
   </div>
 </div>
 <div class="row">
     <div class="col-lg-12">
-        <button type="submit">Add</button>
+        <button type="submit" (click)="onAddedfield()">Add</button>
         <button type="button">Delete</button>
         <button type="button">Clear</button>
         </div>
