--- a/src/app/pages/shoppinglist/shoppinglist.component.html
+++ b/src/app/pages/shoppinglist/shoppinglist.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-10">
-        <app-shoppingedit></app-shoppingedit>
+        <app-shoppingedit (inputAdded)="onIngredientAdded($event)"></app-shoppingedit>
         <hr/>
         <ul>
             <li  *ngFor="let ingredients of ingredient ">
