--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,10 +6,10 @@
         </button>
         <span>My App</span>
         <span class="example-spacer"></span>
-        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" (click)="onSelect('recipe')">
+        <button appBasicHighlight mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" (click)="onSelect('recipe')">
           Recipe
         </button>
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" (click)="onSelect('shopping-list')">
+        <button appBetterHighlight mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" (click)="onSelect('shopping-list')">
         Shopping
        </button>
       </mat-toolbar>
