--- a/src/app/pages/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/pages/recipes/recipe-details/recipe-details.component.html
@@ -7,8 +7,9 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-12">
-       <button class="recipe_menu">Recipe list</button>
+    <div class="col-lg-12" appDropdown>
+       <button class="recipe_menu" >Recipe list</button>
+   
     </div>
 </div>
 <div class="row">
