--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,6 +12,14 @@
         <button appBetterHighlight mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" (click)="onSelect('shopping-list')">
         Shopping
        </button>
+       <div class="menu" appDropdown>
+        <button class="dropdown-toggle">Menu</button>
+        <!-- <ul class="dropdown-menu">
+          <li>bread</li>
+          <li>rice</li>
+          <li>vegetable</li>
+         </ul> -->
+       </div>
       </mat-toolbar>
       </p>
 </div>
