--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,3 +1,39 @@
-.Box{
-    color: red;
+.home {
+  padding: 20px;
+  input {
+    padding: 20px 15px;
+  }
+  p {
+    margin-top: 20px;
+  }
+  .btn_area_one {
+    display: flex;
+    .inc_btn {
+      margin-right: 10px;
+      border: none;
+      background-color: #000;
+      color: #fff;
+      padding: 20px 50px;
+    }
+  }
+  .btn_area_color {
+    display: flex;
+
+    button {
+      margin-right: 10px;
+      color: #fff;
+      padding: 20px 50px;
+      border: none;
+      margin-top: 10px;
+    }
+    .color_btn_red {
+      background-color: red;
+    }
+    .color_btn_blue {
+      background-color: blue;
+    }
+    .color_btn_green {
+      background-color: green;
+    }
+  }
 }
