--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,8 @@ $angular-latest-theme: mat.define-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+button{
+  cursor: pointer;
+}
