--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,6 +5,7 @@
   }
   p {
     margin-top: 20px;
+    padding: 10px;
   }
   .btn_area_one {
     display: flex;
@@ -35,5 +36,29 @@
     .color_btn_green {
       background-color: green;
     }
+    .bgbtn{
+      background: #000;
+    }
   }
+}
+.bgBtnarea{
+  position: relative;
+  .dropdown{
+    position: absolute;
+    bottom: -97px;
+    left: 0;
+    box-shadow: 0 0 5px 2px #514f4fbf;
+    width: 100%;
+    padding: 10px;
+    ul{
+      li{
+      list-style: none;
+      margin-top: 10px;
+      cursor: pointer;
+      }
+    }
+  }
+}
+.bgcls{
+  background-color: aqua;
 }
