--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,12 @@
 <p>login works!</p>
+<form [formGroup]="loginForm">
+    <input class="" type="email" placeholder="Enter Email" name="email" formControlName="email"/>
+    <br>
+    <span style='color:red' *ngIf="emailError && emailError.invalid && emailError.touched">Please Enter a valid Email</span>
+    <br>
+    <input class="" type="password" placeholder="Enter Password" name="password" formControlName="password"/>
+    <br>
+    <span style='color:red' *ngIf="passwordError && passwordError.invalid && passwordError.touched">Please Enter a valid Password</span>
+    <br>
+    <button [disabled]="loginForm.invalid" (click)="submit()">Login</button>
+</form>
