--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,16 +2,10 @@
   <input type="text" placeholder="type here" (input)="onTyping($event)" />
   <p
     [style.color]="
-      changeColor === 'redcolor'
-        ? 'red'
-        : '' || changeColor === 'bluecolor'
-        ? 'blue'
-        : '' || changeColor === 'greencolor'
-        ? 'green'
-        : ''
+      changeColor 
     "
     [class.bgcls]="bgColor==='yes'"
-   [style.fontSize]="counter+'px'"
+   [style.fontSize.px]="counter"
   >
     {{ istyping }}
   
@@ -21,13 +15,13 @@
     <button class="inc_btn" (click)="decrement()">Decrease</button>
   </div>
   <div class="btn_area_color">
-    <button class="color_btn_red" (click)="onColor('redcolor')">
+    <button class="color_btn_red" (click)="onColor('red')">
       Color Red
     </button>
-    <button class="color_btn_blue" (click)="onColor('bluecolor')">
+    <button class="color_btn_blue" (click)="onColor('blue')">
       Color Blue
     </button>
-    <button class="color_btn_green" (click)="onColor('greencolor')">
+    <button class="color_btn_green" (click)="onColor('green')">
       Color Green
     </button>
     <div class="bgBtnarea">
