--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -44,3 +44,5 @@
     <h5>{{item?.first_name}} {{item?.last_name}} </h5>
   </li>
 </ul>
+<hr>
+<button (click)="Onasccending()">Asccending button</button>
