--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,1 +1,30 @@
 <p>register works!</p>
+<h3 class="text-center">User Details</h3>
+<hr>
+<form [formGroup]="registerform" >
+  <div>
+    <label for="email">Email</label>
+    <input type="email" id="email" formControlName="email" placeholder="Enter email" [ngClass]="{'form-submitted': registerform.invalid}"/>
+  </div>
+  <div>
+    <label for="username">Username</label>
+    <input type="text" id="username" formControlName="username"  placeholder="Username"/>
+  </div>
+  <div>
+    <input type="radio" formControlName="userCategory" id="userCategory2" value="employee"/> Employee
+    <input type="radio" formControlName="userCategory" id="userCategory1" value="student"/> Student
+  </div>
+  <div>
+    <label for="institution">Institution </label>
+    <input type="text" id="institution" formControlName="institution" placeholder="Enter institution"/>
+  </div>
+  <div>
+    <label for="company">Company</label>
+    <input type="text" id="company" formControlName="company" placeholder="Enter company"/>
+  </div>
+  <div>
+    <label for="salary">Salary</label>
+    <input type="text" id="salary" formControlName="salary" placeholder="Enter salary"/>
+  </div>
+  <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
+</form>
