--- a/src/app/user/profile/edit/edit.component.html
+++ b/src/app/user/profile/edit/edit.component.html
@@ -1,1 +1,3 @@
-<p>edit works!</p>
+<ul>
+    <li *ngFor="let item of user"><a [routerLink]="['/view',item.id]">{{item.id}}<span>{{item.name}}</span></a> </li>
+</ul>
