--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -26,5 +26,5 @@
     <label for="salary">Salary</label>
     <input type="text" id="salary" formControlName="salary" placeholder="Enter salary"/>
   </div>
-  <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
+  <button type="submit" class="btn btn-primary" (click)="onSubmit($event)">Submit</button>
 </form>
